[package]
name = "mikan"
version = "0.1.0"
edition = "2021"
description = "ZK-Rollup Friendly Data Availability Layer for Bitcoin L2s"
license = "MIT"
repository = "https://github.com/AbdelStark/mikan"
keywords = ["cryptography", "data-availability", "fri", "erasure-coding"]
categories = ["cryptography", "algorithms"]

[dependencies]
# Malachite dependencies
malachitebft-app-channel = { version = "0.0.1", package = "informalsystems-malachitebft-app-channel", git = "https://github.com/informalsystems/malachite" }
malachitebft-proto = { version = "0.0.1", package = "informalsystems-malachitebft-proto", git = "https://github.com/informalsystems/malachite" }

# Malachite test dependencies
malachitebft-test = { version = "0.0.1", package = "informalsystems-malachitebft-test", git = "https://github.com/informalsystems/malachite" }
malachitebft-test-cli = { version = "0.0.1", package = "informalsystems-malachitebft-test-cli", git = "https://github.com/informalsystems/malachite" }

# FRIEDA dependencies
frieda = { git = "https://github.com/keep-starknet-strange/frieda", rev = "9417981" }

# Other dependencies
derive-where = "1.2.7"
async-trait = "0.1.85"
bytes = { version = "1", default-features = false }
color-eyre = "0.6"
config = { version = "0.14", features = ["toml"], default-features = false }
eyre = "0.6"
itertools = "0.13"
prost = "0.13"
rand = { version = "0.8.5", features = ["std_rng"] }
redb = "2.4.0"
serde = "1.0"
serde_json = "1.0"
sha3 = "0.10"
thiserror = { version = "2.0", default-features = false }
tokio = "1.43.0"
toml = "0.8.19"
tracing = "0.1.41"
