[package]
name = "mikan"
version = "0.1.0"
edition = "2021"
description = "ZK-Rollup Friendly Data Availability Layer for Bitcoin L2s"
license = "MIT"
repository = "https://github.com/AbdelStark/mikan"
keywords = ["cryptography", "data-availability", "fri", "erasure-coding"]
categories = ["cryptography", "algorithms"]

[dependencies]
# Malachite dependencies
malachitebft-app-channel = { version = "0.1.0", package = "informalsystems-malachitebft-app-channel", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }
malachitebft-app = { version = "0.1.0", package = "informalsystems-malachitebft-app", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }
malachitebft-codec = { version = "0.1.0", package = "informalsystems-malachitebft-codec", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }
malachitebft-proto = { version = "0.1.0", package = "informalsystems-malachitebft-proto", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }
malachitebft-core-types = { version = "0.1.0", package = "informalsystems-malachitebft-core-types", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }
malachitebft-core-consensus = { version = "0.1.0", package = "informalsystems-malachitebft-core-consensus", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }
malachitebft-signing-ed25519 = { version = "0.1.0", package = "informalsystems-malachitebft-signing-ed25519", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }
malachitebft-sync = { version = "0.1.0", package = "informalsystems-malachitebft-sync", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }

# Malachite test dependencies
malachitebft-test = { version = "0.1.0", package = "informalsystems-malachitebft-test", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }
malachitebft-test-cli = { version = "0.1.0", package = "informalsystems-malachitebft-test-cli", git = "https://github.com/informalsystems/malachite", rev = "fd6b2452fffc5903d0fed36bb4ed984ae7e9085b" }

frieda = { git = "https://github.com/keep-starknet-strange/frieda", branch = "main" } # FRIEDA dependencies

# Other dependencies
async-trait = "0.1.85"
bytes = { version = "1", default-features = false, features = ["serde"] }
color-eyre = "0.6"
config = { version = "0.15", features = ["toml"], default-features = false }
eyre = "0.6"
itertools = "0.14"
prost = "0.13"
rand = { version = "0.8.5", features = ["std_rng"] }
redb = "2.4.0"
serde = "1.0"
serde_json = "1.0"
sha3 = "0.10"
thiserror = { version = "2.0", default-features = false }
tokio = "1.43.0"
toml = "0.8.19"
tracing = "0.1.41"
rs_merkle = "1.5.0"
bincode = { version = "2.0.1", features = ["alloc", "serde"] }
hex = { version = "0.4.3", features = ["serde"] }
chrono = "0.4.40"
rayon = "1.10.0"

[build-dependencies]
prost-build = "0.13"

[workspace.lints.clippy]
too_many_arguments = "allow"
